improve markup for groups: add vertical margins to avoid overlapping

--- a/chosen.css
+++ b/chosen.css
@@ -326,6 +326,7 @@
   cursor: default;
   color: #999;
   font-weight: bold;
+    margin: 4px 0;
 
     background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(20%, #ffffff), color-stop(50%, #f6f6f6), color-stop(52%, #eeeeee), color-stop(100%, #f4f4f4));
     background-image: -webkit-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
